--- a/TP.html
+++ b/TP.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Mi Cobaya</h1>
+
+    <script src="Items.js"></script>
+
+    <script src="ProductosParaCobis.js"></script>
         
     <script src="./app.js"></script>
     
